# mawi-os

./: BACKLOG.md  README.md  RUNBOOK.md  current-workflow.md  example_usage.py  main.py  pyproject.toml  pytest.ini  requirements.txt
agents/: __init__.py  action_agent.py  context_agent.py  contracts.py  crm_agent.py  evaluator_agent.py  execution_agent.py  inference.py  intervention_agent.py  llm_client.py  prompt_blocks.py  prompt_templates.py  runtime_config.py  signal_agent.py  strategist_agent.py
api/: __init__.py  app.py  dependencies.py  dto.py  router.py  routes_actions.py  routes_approval.py  routes_deals.py  schemas.py  service.py
approval/: __init__.py  action_lifecycle.py  policy.py  queue.py
context/: __init__.py  envelope.py  merge_rules.py  models.py  schemas.py  validators.py
data/: __init__.py  db_client.py  models.py
evaluation/: __init__.py  comparator.py  feedback_policy.py  feedback_writer.py  insight_generator.py  metrics.py  outcome_analyzer.py  outcome_ingest.py
memory/: __init__.py  insight_index.py  long_term_store.py  memory_models.py  repository.py  retrieval.py  short_term_store.py
orchestrator/: __init__.py  audit_logger.py  engine.py  errors.py  retry.py  retry_policy.py  runner.py  stage_logger.py  state_machine.py
scripts/: prompt_health_report.py  prompt_simulation_gate.py
tests/: TEST_SUITE_SCENARIOS.md  conftest.py  test_action_plan_execution.py  test_memory_adaptation.py  test_policy_controls.py  test_prompt_contracts.py  test_prompt_diagnostics.py  test_prompt_experiment_rollout.py  test_retry_and_summary.py  (+1 more)
(+75 files in other folders)
