[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mawi-os"
version = "0.1.0"
description = "MAWI Multi-Agent Workflow Intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "agents*",
  "api*",
  "approval*",
  "context*",
  "data*",
  "evaluation*",
  "memory*",
  "orchestrator*",
  "tools*",
  "workflows*",
]
exclude = ["tests*", "scripts*"]
